--- a/tp4_heroku/Dockerfile
+++ b/tp4_heroku/Dockerfile
@@ -7,4 +7,4 @@ apt-get install python3 python3-pip -y && \
 pip3 install --upgrade pip && \
 pip3 install -r requirements.txt
 
-CMD streamlit run main.py
+CMD streamlit run main.py --server.port $PORT
